# litestar-scribble

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pr-title.yml  publish.yml
docs/: changelog.md  conf.py  index.md  roadmap.md
docs/_static/: custom.css
docs/api/: game.rst  realtime.rst  services.rst  storage.rst  web.rst
docs/getting-started/: index.rst
docs/guides/: configuration.md  development.md  index.md
examples/: app.py  app_ui.py  wordbank_example.py
frontend/: .gitignore  package.json  vite.config.ts
frontend/src/css/: main.css
frontend/src/js/: main.js
pr-preview/pr-2/: .buildinfo  changelog.html  game_models_design.html  game_models_summary.html  genindex.html  index.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js  wordbank_system.html
pr-preview/pr-2/.doctrees/: changelog.doctree  game_models_design.doctree  game_models_summary.doctree  index.doctree  roadmap.doctree  wordbank_system.doctree
pr-preview/pr-2/.doctrees/api/: auth.doctree  core.doctree  game.doctree  index.doctree  plugin.doctree  realtime.doctree  services.doctree  storage.doctree  web.doctree
pr-preview/pr-2/.doctrees/getting-started/: index.doctree  installation.doctree  quickstart.doctree
pr-preview/pr-2/.doctrees/guides/: configuration.doctree  deployment.doctree  development.doctree  index.doctree
pr-preview/pr-2/_modules/: index.html
pr-preview/pr-2/_modules/scribbl_py/: exceptions.html  plugin.html
pr-preview/pr-2/_modules/scribbl_py/auth/: config.html  controller.html  models.html  service.html
pr-preview/pr-2/_modules/scribbl_py/core/: models.html  style.html  types.html
pr-preview/pr-2/_modules/scribbl_py/game/: exceptions.html  models.html  moderation.html  types.html  wordbank.html
pr-preview/pr-2/_modules/scribbl_py/realtime/: handler.html  manager.html  messages.html
pr-preview/pr-2/_modules/scribbl_py/services/: canvas.html  export.html  game.html  telemetry.html
pr-preview/pr-2/_modules/scribbl_py/storage/: base.html  memory.html
pr-preview/pr-2/_modules/scribbl_py/storage/db/: models.html  storage.html
pr-preview/pr-2/_modules/scribbl_py/web/: controllers.html  dto.html  health.html  router.html
pr-preview/pr-2/_sources/: game_models_design.md.txt  game_models_summary.md.txt  wordbank_system.md.txt
pr-preview/pr-2/_sources/api/: auth.rst.txt  core.rst.txt  index.rst.txt  plugin.rst.txt
pr-preview/pr-2/_sources/getting-started/: installation.rst.txt  quickstart.rst.txt
pr-preview/pr-2/_sources/guides/: deployment.md.txt
pr-preview/pr-2/api/: auth.html  core.html  game.html  index.html  plugin.html  realtime.html  services.html  storage.html  web.html
pr-preview/pr-2/getting-started/: index.html  installation.html  quickstart.html
pr-preview/pr-2/guides/: configuration.html  deployment.html  development.html  index.html
src/scribbl_py/: __init__.py  app.py  exceptions.py  plugin.py
src/scribbl_py/auth/: __init__.py  config.py  controller.py  db_service.py  models.py  service.py
src/scribbl_py/cli/: __init__.py  database.py
src/scribbl_py/core/: __init__.py  commands.py  error_handling.py  exceptions.py  logging.py  models.py  openapi.py  rate_limit.py  style.py  tasks.py  types.py
src/scribbl_py/game/: __init__.py  exceptions.py  models.py  moderation.py  types.py  word_lists.py  wordbank.py
src/scribbl_py/realtime/: __init__.py  game_handler.py  handler.py  manager.py  messages.py
src/scribbl_py/services/: __init__.py  canvas.py  export.py  game.py  telemetry.py
src/scribbl_py/storage/: __init__.py  base.py  memory.py
src/scribbl_py/storage/db/: __init__.py  auth_models.py  auth_storage.py  models.py  setup.py  storage.py
src/scribbl_py/storage/db/migrations/: env.py  script.py.mako
src/scribbl_py/storage/db/migrations/versions/: 001_initial_schema.py  002_add_z_index_and_group.py  003_auth_tables.py  004_add_layer_state.py
src/scribbl_py/templates/: base.html  canvas_clash_game.html  canvas_clash_home.html  canvas_clash_lobby.html  canvas_editor.html  canvas_list.html  canvas_new.html  index.html
src/scribbl_py/templates/auth/: leaderboard.html  login.html  navbar.html  profile.html
src/scribbl_py/templates/partials/: canvas_card.html  canvas_clash_game_over.html  canvas_clash_round_end.html  canvas_clash_word_selection.html  canvas_grid.html  canvas_list.html  canvas_list_content.html  canvas_new_content.html  index_content.html  toast.html
src/scribbl_py/web/: __init__.py  controllers.py  dto.py  game_controllers.py  health.py  router.py  stats_controller.py  ui.py
tests/: conftest.py  test_api.py  test_auth.py  test_canvas_clash.py  test_canvas_operations.py  test_db_storage.py  test_export.py  test_game_wordbank.py  test_init.py  test_models.py  test_room_permissions.py  test_storage.py  test_websocket.py
